2000-06-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* coop.c (scm_I_am_dead):  Made static and renamed to I_am_dead.

	* coop.h (scm_internal_select, scm_I_am_dead), iselect.h
	(scm_I_am_dead, scm_init_iselect):  Removed references.

	* threads.c (mutex_free):  Added comment.

2000-06-07  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* feature.c (scm_init_feature):  Let the threads subsystem take
	care of adding 'threads to the feature list.

	* threads.c (scm_init_threads), guile-coop.c (scm_threads_init):
	Add 'threads and 'coop-threads to the feature list.

	* init.c (scm_boot_guile_1):  Make sure that the feature list
	exists before threads are initialized.

	* threads.h (SCM_SET_THREAD_DATA):  Added.

	* threads.c (scheme_launch_thread, scm_spawn_thread,
	scm_call_with_new_thread):  Use SCM_SET_CELL_TYPE and
	SCM_SET_THREAD_DATA to modify cell elements of thread objects.

	* threads.c (c_launch_thread, scheme_launch_thread, thread_free):
	Add comments about invalidating the SCM object of a thread that
	has exited.

	(scm_thread_cancel, thread_free, scm_thread_join):  Make sure that
	the thread data is valid (i. e. the thread is still running)
	before passing thread data to the thread implementation.

2000-06-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* Makefile.am (noinst_HEADERS):  coop-threads.c coop-threads.h
	coop.c are not considered part of guile's core any more.

	(modinclude_HEADERS):  coop-defs.h no longer exists.

	* __scm.h (SCM_THREAD_DEFER, SCM_THREAD_ALLOW, SCM_THREAD_REDEFER,
	SCM_THREAD_SWITCHING_CODE, SCM_THREAD_SWITCH_COUNT):  Moved here
	from threads.h.  These macros, however, may have to be updated in
	order to be used with other thread packages than coop.

	* coop.c:  Added code from iselect.c, made lots of definitions
	static, made some definitions global.  The structure is not very
	clean yet, especially the code from iselect.c could need some
	better integration.

	* coop.h:  Added.  Contains declarations from the former header