@@ -1,3 +1,10 @@
+2000-11-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* coop.c (coop_aborthelp, coop_join):  When a thread finishes, its
+	stack base is not set to NULL any more.
+
+	* threads.c (scm_thread_join):  Added FIXME comment.
+
 2000-06-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* coop.c (scm_I_am_dead):  Made static and renamed to I_am_dead.
